--- a/example/theme/about.html
+++ b/example/theme/about.html
@@ -8,7 +8,7 @@
 
     <title>@model.title</title>
 
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
